# webrtc-audioproc

./: Makefile.am  README.md  configure.ac  readme.txt  test.cpp  typedefs.h
common_audio/: Makefile.am  common_audio.pc.in  signal_processing_unittests.vcproj
common_audio/resampler/main/source/: resampler.sln  resampler.vcproj
common_audio/signal_processing_library/main/source/: spl.sln
common_audio/vad/main/source/: vad.sln  vad.vcproj
modules/audio_processing/: Makefile.am
modules/audio_processing/aec/main/source/: aec.vcproj
modules/audio_processing/ns/: nsx_core_neon_offsets.h
modules/audio_processing/ns/main/source/: ns.sln
modules/audio_processing/utility/: util.sln
system_wrappers/: Makefile.am
system_wrappers/source/: cpu_info.cc  system_wrappers.vcproj  system_wrappersTest.vcproj  system_wrappers_unittests.vcproj  trace_linux.cc
trunk/: configure.ac  webrtc-audioproc.pc.in
trunk/common_audio/: common_audio.sln  resampler.vcproj  resampler_unittests.vcproj  signal_processing.vcproj  vad.vcproj  vad_unittests.vcproj
trunk/common_audio/signal_processing_library/main/source/: spl.vcproj
trunk/modules/: Makefile.am
trunk/modules/audio_processing/: Makefile.am  audio_processing.pc.in
trunk/modules/audio_processing/aec/main/source/: aec.sln
trunk/modules/audio_processing/aecm/: aecm_core_neon_offsets.h
trunk/modules/audio_processing/aecm/main/source/: aecm.sln  aecm.vcproj
trunk/modules/audio_processing/agc/main/source/: agc.sln  agc.vcproj
trunk/modules/audio_processing/main/source/: apm.sln  audio_processing.vcproj
trunk/modules/audio_processing/ns/: nsx_core_neon.c
trunk/modules/audio_processing/ns/main/source/: ns.vcproj  ns_fix.vcproj
trunk/modules/audio_processing/utility/: apm_util.vcproj
trunk/system_wrappers/: Makefile.am  system_wrappers.pc.in
trunk/system_wrappers/source/: system_wrappers.sln
trunk/win32/: win32.sln
trunk/win32/audio_processing/: audio_processing.vcproj
trunk/win32/common_audio/: common_audio.vcproj
trunk/win32/system_wrappers/: system_wrappers.vcproj
trunk/wp8/: wp8.sln
trunk/wp8/audio_processing/: audio_processing.vcxproj  audio_processing.vcxproj.filters
trunk/wp8/common_audio/: common_audio.vcxproj
trunk/wp8/system_wrappers/: system_wrappers.vcxproj
win32/common_audio/: common_audio.vcproj
win32/system_wrappers/: system_wrappers.vcproj
wp8/: wp8.sln
wp8/common_audio/: common_audio.vcxproj  common_audio.vcxproj.filters
wp8/system_wrappers/: system_wrappers.vcxproj  system_wrappers.vcxproj.filters
